--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -5,7 +5,7 @@ body{
     height: 100vh;
     display: flex;
     background-image: url(../imagens/77929c41-b8da-4ddf-8f1f-35a8f6d73a59-profile_banner-480.jpeg);
-    background-size: cover;
+    background-size: 500%;
     background-position-x: 50%;
     justify-content: center;
 }
@@ -14,9 +14,9 @@ body{
 }
 header{
     display: flex;
+    flex: 1;
     height: 50px;
     align-items: center;
-    justify-content: flex-start;
     background-color: rgb(255, 255, 255);
 }
 main{
@@ -33,6 +33,9 @@ main{
     margin-left: 10px;
     border: 1px solid rgb(0, 0, 0);
 }
+.menu{
+   justify-self: flex-start;
+}
 ul{
     display: flex;
     gap: 20px;
@@ -46,6 +49,11 @@ a{
     text-decoration: none;
     color: rgb(0, 0, 0);
     padding-block: 5px;
+}
+.icons{
+    margin-left: auto;
+    margin-right: 20px;
+    width: max-content;
 }
 .banner{
     width: 100%;
